# woordjes_leren

./: CMakeLists.txt  main.cpp  temp.txt  woordjes.txt
